--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -105,8 +105,8 @@
 
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Contract formed in a province or territory other than Quebec</h1>
-<div class="alert alert-warning">
-<p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
+<div class="alert alert-info">
+<p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
  <p>Use this guidance if the contract was formed (unless the contract states differently):</p>
@@ -123,18 +123,14 @@
 	<li><a href="#h-4">References</a></li>    
        
   </ul>
-		 
-<h2 id="h-1">Gather the facts</h2> 
-<div id="allq" class="alert alert-danger">
-<p>Make a selection and <strong>scroll down</strong> for further questions on factors and indicators to help you gather the facts based on your situation.</p>
-<p>The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a case-by-case basis.</p>
-  </div>			  
 
-<h3>Factors</h3> 
+<p>Answer a few questions to help you gather the facts based on your situation. The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a case-by-case basis.</p>
+<p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or indicators to help you gather the facts based on your situation</p>
+<h3 id="h-1">Gather the facts</h3>
 <ol class="lst-stps stps-strpd">
 <li><h3>Contract arrangement</h3> 
-<div id="contract">
-<p id="1" class="brdr-bttm">The CRA asks the worker and the payer what their intent was when they entered into the working arrangement. Workers and payers can choose how they set up their affairs. However, the employment status they choose must reflect their working relationship.</p>
+<div id="contract_2">
+<p id="1" class="brdr-bttm">The CRA asks the worker and the payer what their intent was when they entered into the working arrangement. Workers and payers can choose how they set up their affairs. However, the working status they choose must reflect their working relationship.</p>
 
 <details><summary>Factor 1 - Questions and indicators</summary>
 <div id="ajax-cont1"><div class="wb-frmvld gc-font-2019"><form method="get">
@@ -194,7 +190,7 @@
 
 <div id="ajax-cont2self" class="hidden wb-frmvld gc-font-2019 alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
-<p>A short term contract could be an indication of self employed. The working relationship between the payer and the worker does not present a degree of continuity, loyalty, security, or integration, all of which are generally associated with an employer-employee relationship.</p>
+<p>A short term contract could be an indication of self-employed. The working relationship between the payer and the worker does not present a degree of continuity, loyalty, security, or integration, all of which are generally associated with an employer-employee relationship.</p>
 </div>
 
 </form></div></div></details></div>
@@ -288,12 +284,12 @@
 
 <div id="ajax-2byes1" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
-<p>The payer has the <strong>final </strong>word as to when the worker performs his/her service. In other words, the worker requires permission from the payer to make any changes.</p>
+<p>The payer has the <strong>final </strong>word as to when the worker performs their service. In other words, the worker requires permission from the payer to make any changes.</p>
 </div>
 
 <div id="ajax-2bno1" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
-<p>The worker has the <strong>final </strong>word as to when they perform his/her service. In other words, the worker doesn't require permission from the payer to make any changes.</p>
+<p>The worker has the <strong>final </strong>word as to when they perform their service. In other words, the worker doesn't require permission from the payer to make any changes.</p>
 </div>
 </form></div></div>
 
@@ -340,7 +336,7 @@
 
 <div id="ajax-2b4" class="mrgn-tp-lg"><div class="wb-frmvld gc-font-2019"><form method="get">
 <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
-		<p>Work schedule. Can the worker leave at anytime during the day without the approval of the payer? </p>
+		<p>Work schedule. Can the worker leave at any time during the day without the approval of the payer? </p>
 		<ul>
 		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-2byes4", "live": true}'>Yes</li>
 		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-2bno4", "live": true}'>No </li>
@@ -389,7 +385,7 @@
 
 <div id="ajax-2byes6" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
-<p>The worker must ask for the payer's permission for any leave or absence. The payer had the final say as to whether the worker can take a leave from work.</p>
+<p>The worker must ask for the payer's permission for any leave of absence. The payer had the final say as to whether the worker can take a leave from work.</p>
 </div>
 
 <div id="ajax-2bno6" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
@@ -462,7 +458,7 @@
 
 <div id="ajax-2cno3" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
-<p>The worker works independently and is ultimately responsible for meeting the client’s expectations. </p>
+<p>The worker works independently and is ultimately responsible for meeting the payers’s expectations. </p>
 </div>
 </form></div></div>
 
@@ -485,7 +481,7 @@
 
 <div id="ajax-2cno4" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
-<p>The worker is responsible for satisfying the client’s needs, and rectifying  any problems that may arise. </p>
+<p>The worker is responsible for satisfying the payer’s needs, and rectifying  any problems that may arise. </p>
 </div>
 </form></div></div>
 
@@ -506,7 +502,7 @@
 
 <div id="ajax-2cno5" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
-<p>Self employed people can generally be paid by the job, rather than an hourly or weekly rate.</p>
+<p>Self-employed people can generally be paid by the job, rather than an hourly or weekly rate.</p>
 </div>
 </form></div></div>
 
@@ -533,7 +529,7 @@
 
 <div id="ajax-2d1"><div class="wb-frmvld gc-font-2019"><form method="get">
 	<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
-		<p>Remuneration. Does the payer determine the worker's rate of pay (negotiated between the worker and the payer?</p>
+		<p>Remuneration. Does the payer determine the worker's rate of pay (negotiated between the worker and the payer)?</p>
 		<ul>
 		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-2dyes1", "live": true}'>Yes</li>
 		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-2dno1", "live": true}'>No </li>
@@ -865,13 +861,13 @@
 
 <div id="ajax-tool2yes" class="hidden wb-frmvld gc-font-2019 alert alert-info">
 <h4><span class="fas fa-user-slash text-primary fa-1x"> </span> Indicator: Facts are neutral</h4>
-<p>This fact is neutral. The provision of tools and equipment may not be a good indicator of an employee or self employed worker.</p>
+<p>This fact is neutral. The provision of tools and equipment may not be a good indicator of an employee or self-employed worker.</p>
 </div>
 
 
 <div id="ajax-tool2no" class="hidden wb-frmvld gc-font-2019 alert alert-info">
 <h4><span class="fas fa-user-slash text-primary fa-1x"> </span> Indicator: Facts are neutral</h4>
-<p>This fact is neutral. Provision of tool and equipment may be a useful indicator of an employee or a self employed individual.</p>
+<p>This fact is neutral. Provision of tool and equipment may be a useful indicator of an employee or a self-employed individual.</p>
 </div>
 </form></div></div>
 
@@ -892,7 +888,7 @@
 
 <div id="ajax-tool3yes" class="hidden wb-frmvld gc-font-2019 alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
-<p>Generally, a self employed individual would be responsible for providing or renting all tools necessary to complete a task, including renting equipment from a payer. </p>
+<p>Generally, a self-employed individual would be responsible for providing or renting all tools necessary to complete a task, including renting equipment from a payer. </p>
 </div>
 </form></div></div>
 
@@ -1160,7 +1156,7 @@
 
 <div id="ajax-5yes9" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
-<p>A worker who is an employee generally has it less negotiating power when determining rates of pay than a self employed person. </p>
+<p>A worker who is an employee generally has it less negotiating power when determining rates of pay than a self-employed person. </p>
 </div>
 
 <div id="ajax-5no9" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
@@ -1449,12 +1445,12 @@
 
 <div id="ajax-6no11" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
-<p>The worker would carry out heir duties under the business number of the payer.</p>
+<p>The worker would carry out their duties under the business number of the payer.</p>
 </div>
 
 <div id="ajax-6yes11" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
-<p>When the worker has their own business number, this indicate a separate business presence from the payer. </p>
+<p>When the worker has their own business number, this indicates a separate business presence from the payer. </p>
 </div>
 </form></div></div>
 
@@ -1711,8 +1707,8 @@
 </details></li>
 
 </ol>
-
-<h2 id="h-2">Analyze the facts</h2> 
+<div id="facts" >	
+<h3 id="h-2">Analyze the facts</h3> 
 <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
 <p>You must analyze the answer to each question from both the payer <strong>and </strong>the worker to help you decide if the evidence moves the worker to the employee or self-employed side of the continuum.</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -1728,13 +1724,13 @@
 <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
 
 
-<h2 id="h-3">Consider special situations</h2> 
+<h3 id="h-3">Consider special situations</h3> 
 
 <p>A deemed employer is one of the following:</p>
 
 <ul>
 <li>a third party that generally controls, directly supervises, or pays the remuneration to an insured person in its own name and not on behalf of the actual employer. </li>
-<li>a person who has rights or privileges on premises or property under a licence, permit, or agreement and who agrees to allow another employer's workers to work on these premises or property. </li>
+<li>a person who has rights or privileges on premises or property under a license, permit, or agreement and who agrees to allow another employer's workers to work on these premises or property. </li>
 </ul>
 <p>Analyzing the relationship: </p>
 
@@ -1745,16 +1741,15 @@
 <li>what is the procedure for issuing pay? </li>
 <li>where do the funds necessary for the payment of the salaries come from? </li>
 </ul>
-</li>
+
 <li>Sections 5 and 6 IECPR  </li>
 <li>Placement/Employment Agencies (Section 7 IECPR) </li>
 <li>Barbers and Hairdressers (Section 8 IECPR) </li>
-<li>Taxi Drivers (Section 9 IECPR) </li><//l><p><strong>CPP </strong>&ndash; Subsection 2(1)</p>
-<p><strong>CPPR </strong>&ndash; Subsection 8.1(1)</p>
-<p><strong>IECPR </strong>&ndash; Subsections 1(2) and 10(1)</p>
-
-
-
+<li>Taxi Drivers (Section 9 IECPR) </li>
+<li><strong>CPP </strong>&ndash; Subsection 2(1)</li>
+<li><strong>CPPR </strong>&ndash; Subsection 8.1(1)</li>
+<li><strong>IECPR </strong>&ndash; Subsections 1(2) and 10(1)</li>
+</div>   	 
 	 
 <h2 id="h-4">References</h2>
 
