--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -124,6 +124,19 @@
        
   </ul>
 
+<h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
+<ul class="cnjnctn-type-or cnjnctn-sm">
+	<li class="cnjnctn-col"><a href="#tab1">Interactive questions</a> to get specific results, factors and indicators </li>
+	<li class="cnjnctn-col"><a href="#tab2">Read full-text</a> information using the current guide</li>
+	</ul>
+  <div class="wb-tabs mrgn-tp-lg ignore-session">
+    <div class="tabpanels">
+      <details><summary><span class="fas fa-check text-success fa-lg "></span> <strong>Great choice!</strong> Answer interactive questions</summary>
+   
+<div class="alert alert-warning">
+<p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
+</div>
+
 <p>Answer a few questions to help you gather the facts based on your situation. The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a case-by-case basis.</p>
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or indicators to help you gather the facts based on your situation</p>
 <h3 id="h-1">Gather the facts</h3>
@@ -1749,7 +1762,14 @@
 <li><strong>CPP </strong>&ndash; Subsection 2(1)</li>
 <li><strong>CPPR </strong>&ndash; Subsection 8.1(1)</li>
 <li><strong>IECPR </strong>&ndash; Subsections 1(2) and 10(1)</li>
-</div>   	 
+</div>   
+      </details>
+ <details>
+        <summary>Read full-text</summary>
+     <p id="tab2">RC4110 Rev. 22</p>
+  <div data-ajax-replace="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html"></div>
+</details></div></div>
+	 
 	 
 <h2 id="h-4">References</h2>
 
