--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -129,7 +129,7 @@
 	</ul>
   <div class="wb-tabs mrgn-tp-lg ignore-session">
     <div class="tabpanels">
-      <details><summary><span class="fas fa-check text-success fa-lg "></span> <strong>Great choice!</strong> Answer interactive questions</summary>
+      <details><summary>Answer interactive questions</summary>
    
 <div class="alert alert-warning">
 <p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
