--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -110,9 +110,9 @@
 </div>
 
  <p>Use this guidance if the contract was formed (unless the contract states differently):</p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col">In a province other than Quebec or in a territory</li>
-<li class="cnjnctn-col">Outside Canada and the employment is performed in a province other than Quebec, in a territory, or in another country</li>
+<ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> In a province other than Quebec or in a territory</li>
+<li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province other than Quebec, in a territory, or in another country</li>
 </ul>
 
 
@@ -128,14 +128,9 @@
 <div class="alert alert-warning">
 <p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
 </div>
-<h2 class="h3">On this page</h2>
-  <ul>
-	<li><a href="#h-1">Gather the facts</a></li>
-	<li><a href="#h-2">Analyze the facts</a></li>  
-	<li><a href="#h-3">Consider special situations</a></li>   
-       
-  </ul>
-<p>Answer a few questions to help you gather the facts based on your situation. The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a case-by-case basis.</p>
+
+<h2>Answer a few questions to help you gather the facts based on your situation</h2>
+<p>The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a case-by-case basis.</p>
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or indicators to help you gather the facts based on your situation</p>
 <h3 id="h-1">Gather the facts</h3>
 <ol class="lst-stps stps-strpd">
