--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -130,7 +130,7 @@
 <h2>Answer a few questions to help you gather the facts based on your situation</h2>
 <p>The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a case-by-case basis.</p>
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or indicators to help you gather the facts based on your situation</p>
-<h3 id="h-1">Gather the facts</h3>>			  
+<h3 id="h-1">Gather the facts</h3>			  
 
 <ol class="lst-stps stps-strpd">
 <li><h3>Contract arrangement</h3> 
