--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1802,10 +1802,51 @@
 	<div data-ajax-replace="#ajax-psb"></div>
 	</div></section>
 
+<section id="psb_2" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="#ajax-psb"></div>
+	</div></section>
+
+
+<section id="contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="#ajax-contract"></div>
+	</div></section>
 
 <section id="contract1" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-contract"></div>
+	</div></section>
+
+<section id="person" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is a person</h2>
+	</header>	<div class="modal-body">		
+	<p>A trust, individual, corporation, partnership or a succession, or a body that is an association, club, commission, union or another organization of any kind.</p>
+
+	</div></section>
+
+<section id="specified" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is a specified shareholder</h2>
+	</header>	<div class="modal-body">		
+	<p>A <strong>specified shareholder </strong>of the corporation is an individual who <strong>directly or indirectly owns at least 10% of the issued shares </strong>of any class of a capital stock of the corporation or a related corporation.</p>
+
+	</div></section>
+
+<section id="fulltime" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is a full time employee</h2>
+	</header>	<div class="modal-body">		
+	<p>An employee who works a full business day on each working day of the year, subject to normal absences due to illness or vacation.</p>
+
+	</div></section>
+
+<section id="relatedcorp" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is an associated corporation</h2>
+	</header>	<div class="modal-body">		
+	<p>A corporation is associated with another corporation in a taxation year if, at some point in the year if <strong>one </strong>of the following apply:</p>
+
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col">One of the Corporations directly or indirectly controls, in any manner whatsoever, the other corporation </li>
+<li class="cnjnctn-col">The two Corporations are directly or indirectly controlled, in any manner whatsoever, by the same person or same group of persons </li>
+<li class="cnjnctn-col">Each of the Corporations is directly or indirectly controlled, in any manner whatsoever, by a person, and the person that controls one of the Corporations is related to the person that controls the other corporation, and either of the persons owns at least 25% of the issued shares of any class, other than a specified class, of the capital stock of each corporation </li>
+<li class="cnjnctn-col">One of the Corporations is directly or indirectly controlled, in any manner whatsoever, by a person that is related to each member of a group of persons that controls the other corporation, and this person owns at least 25% of the issued shares of any class, other than a specified class, of the capital stock of the other corporation </li>
+<li class="cnjnctn-col">Each of the Corporations is directly or indirectly controlled, in any manner whatsoever, by a related group and each member of one of the related groups is related to all of the members of the other related group, and one person who is a member of both related groups owned alone, or several persons who are members of both related groups owned together, in respect of each corporation, at least 25% of the issued shares of any class, other than a specified class, of the capital stock thereof </li>
+</ul>
 	</div></section>
 
             <div id="def-preFooter"></div>
