--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -1021,6 +1021,13 @@
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/i-3.3/page-205.html#h-317484">ITA: 248(1)</a> </dt> <dd>Definition of a specified shareholder</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/index.html#wb-cont">CPP: 2(1)</a> </dt> <dd>Definition of employment </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/e-5.6/#wb-cont">EIA: 2(1)</a> </dt> <dd>Definition of employment</dd>
+<dt><a href="">CPPR: 8.1(1)</a> </dt> <dd>Add description </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/e-5.6/#wb-cont">EIA: 2(1)</a> </dt> <dd>Definition of employment</dd>
+<dt><a href="">IECPR: 1(2) and 10(1)</a> </dt> <dd>Add description</dd>
+<dt><a href="">IECPR: 5 and 6</a> </dt> <dd>Add description</dd>
+<dt><a href="">IECPR: 7</a> </dt> <dd>Placement or employment agencies</dd>
+<dt><a href="">IECPR: 8</a> </dt> <dd>Barbers and hairdressers</dd>
+<dt><a href="">IECPR: 9</a> </dt> <dd>Taxi drivers</dd>
 </dl>
 	
 </div>
