--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -957,41 +957,22 @@
 </form></div></div>
 
 </details></li></ol>
-<h3 id="h-2_2">Analyze the facts</h3> 
+<details><summary> Analyze the facts</summary> 
 <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
 <p>You must analyze the answer to each question from both the payer <strong>and </strong>the worker to help you decide if the evidence moves the worker to the employee or self-employed side of the continuum.</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-people-arrows text-primary fa-2x"> </span> Worker is an employee</li>
 <li class="cnjnctn-col"><span class="fas fa-user text-primary fa-2x"> </span> Worker is self-employed</li>
 </ul>
-<h3 id="h_0_1_2">Weighing the facts</h3>
+ </details>
+
+<details><summary>Weighing the facts</summary> 
 <p>This is the most important part of analyzing the information. When reviewing the factors, there may be some facts that support an employee-employer relationship and other facts indicate self-employement.</p>
 <p>To help you resolve this issue, you must determine the true essence of the working relationship of the parties. You must review the indicators in the factors of control, ownership of tools and equipment, opportunity for profit and financial risk, and responsibility for investment and management. As you respond to each question you should be able to decide what weight to assign each category based on a thorough review of all the responses. For example, control may favour an employee relationship, but ownership of tools may be assigned <strong>more weight </strong>due to how the total relationship is structured. This may be an indicator because of the increased weight given to this factor, the worker is moved into the independent contractor side of the continuum.</p>
-<h3 id="h_0_2_2">Case-by-case basis</h3>
+ </details>
+<details><summary>Review each situation on a case-by-case basis</summary> 
 <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
-<h3 id="h-3_2">Consider special situations</h3> 
-<p>A deemed employer is one of the following:</p>
-<ul>
-<li>a third party that generally controls, directly supervises, or pays the remuneration to an insured person in its own name and not on behalf of the actual employer. </li>
-<li>a person who has rights or privileges on premises or property under a license, permit, or agreement and who agrees to allow another employer's workers to work on these premises or property. </li>
-</ul>
-<p>Analyzing the relationship: </p>
-<ul>
-<li>who supervises the worker? </li>
-<li>where do the workers perform their tasks? </li>
-<li>does the party paying the salary act in its own name? </li>
-<li>what is the procedure for issuing pay? </li>
-<li>where do the funds necessary for the payment of the salaries come from? </li>
-</ul>
-<ul>
-<li>Sections 5 and 6 IECPR  </li>
-<li>Placement/Employment Agencies (Section 7 IECPR) </li>
-<li>Barbers and Hairdressers (Section 8 IECPR) </li>
-<li>Taxi Drivers (Section 9 IECPR) </li>
-<li><strong>CPP </strong>&ndash; Subsection 2(1)</li>
-<li><strong>CPPR </strong>&ndash; Subsection 8.1(1)</li>
-<li><strong>IECPR </strong>&ndash; Subsections 1(2) and 10(1)</li>
-</ul>
+</details>
  </details>
  <details>
         <summary>Read full-text</summary>
