--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -957,6 +957,7 @@
 </form></div></div>
 
 </details></li></ol>
+<div id="facts" >	
 <details><summary> Analyze the facts</summary> 
 <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
 <p>You must analyze the answer to each question from both the payer <strong>and </strong>the worker to help you decide if the evidence moves the worker to the employee or self-employed side of the continuum.</p>
@@ -972,7 +973,7 @@
  </details>
 <details><summary>Review each situation on a case-by-case basis</summary> 
 <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
-</details>
+</details></div>
  </details>
  <details>
         <summary>Read full-text</summary>
