--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -199,20 +199,21 @@
 
 <div id="ajax-psb5yes" class="hidden wb-frmvld gc-font-2019 alert alert-info">
  <h3><small>Your result </small><br>
-               Indicator: The worker is a PSB</h3>
+               Indicator: The worker is an incorporated employee</h3>
 <hr>
 
+<p>The worker is an incorporated employee. This also means that the worker is operating a personal service business (PSB). </p>
 <p>PSB’s have different tax obligations.</p>
 <p class="mrgn-tp-md">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
 </div>
 
 <div id="ajax-psb5not" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
  <h3><small>Your result </small><br>
-               You are not sure if the worker is a PSB or not</h3>
+               You are not sure if the worker is a incorporated employee</h3>
 <hr>
 	
 <p>To determine if the worker is considered an employee, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine where the contract was formed</a>.</p>
-<details><summary>More information</summary>
+<details><summary>Why do you need to determine if the worker is considered an employee</summary>
 <p>A corporation is a PSB if the incorporated employee that provides services to the person on behalf of the corporation <strong>could reasonably be considered an employee of that person if the corporation did not exist</strong>.</p>
 <p>An <strong>employee-employer relationship </strong>between the incorporated employee and the person that received the services must be shown. Both are therefore bound by a contract of employment instead of a contract of enterprise. </p>
 <p>The <strong>factors </strong>used to determine whether an <strong>employee-employer relationship exists</strong> are the same factors used to determine a worker's status as an employee or self-employed worker. </p>
@@ -222,8 +223,9 @@
 
 <div id="ajax-psb1no" class="hidden wb-frmvld gc-font-2019 alert alert-info">
  <h3><small>Your result </small><br>
-               Indicator: The worker is not a PSB</h3>
+               Indicator: The worker is not an incorporated employee</h3>
 <hr>
+<p>The worker is not an incorporated employee. This also means that the worker is <strong>not</strong> operating a personal service business (PSB).</p>
 <p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine where the contract was formed</a></p>
 </div>
 
