--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -225,7 +225,7 @@
  <h3><small>Your result </small><br>
                Indicator: The worker is not an incorporated employee</h3>
 <hr>
-<p>The worker is not an incorporated employee. This also means that the worker is <strong>not</strong> operating a personal service business (PSB).</p>
+<p>The worker is <strong>not</strong> an incorporated employee. This also means that the worker is <strong>not</strong> operating a personal service business (PSB).</p>
 <p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine where the contract was formed</a></p>
 </div>
 
