--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -197,7 +197,7 @@
 
   <div id="results" class="mrgn-tp-lg" aria-live="polite">
 
-<div id="ajax-psb5yes" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+<div id="ajax-psb5yes" class="hidden wb-frmvld gc-font-2019 alert alert-success">
  <h3><small>Your result </small><br>
                Indicator: The worker is an incorporated employee</h3>
 <hr>
