--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -254,10 +254,10 @@
 <p>Learn more: </p>
 <ul>
 	<li><a href="#contract-null" aria-controls="contract-null" class="overlay-lnk" role="button">Who decides when a contract is null and void&nbsp;<span class="far fa-question-circle"></span></a> </li>
-   <li><a href="#contract-stop" aria-controls="contract-stop" class="overlay-lnk" role="button">Examples of cessation of a contract&nbsp;<span class="far fa-question-circle"></span></a></li></ul>
+   <li><a href="#contract-stop" aria-controls="contract-stop" class="overlay-lnk" role="button">Examples of termination of a contract&nbsp;<span class="far fa-question-circle"></span></a></li></ul>
 
 
-<p class="mrgn-tp-lg">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker is an incorporated employee</a> .</p>
+<p class="mrgn-tp-lg">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker is an incorporated employee</a></p>
 </div>
 
 </div></div>
@@ -366,7 +366,7 @@
 	</div></section>
 
 
-<section id="contract-stop" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Examples of cessation of a contract</h2>
+<section id="contract-stop" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Examples of termination of a contract</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-contract-stop"></div>
 	</div></section>
