--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -95,7 +95,7 @@
 </div>
 
 
-<p>There must be a valid contract in place to determine if the engagement is considered as employment or self-employment. To use the guidance on the worker classification, there must be, or will be, a valid contract in place.</p>
+<p>There must be a valid contract in place to determine if the engagement is considered as employment or self-employment.</p>
 <details> <summary>Examples of questions the CRA may ask you to determine the validity and the terms of the contract</summary>
 <h3 id="h_1_1">Validity of a contract</h3>
 <ul>
@@ -212,7 +212,9 @@
 <hr>
 <h4>Indicator: Contract is not valid</h4>    
  <p>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties to be considered a valid contract.  </p>
- <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
+ <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>    
+<p>The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
+<p>Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>   
             </div>
 
 
@@ -222,7 +224,9 @@
 <hr>
 <h4>Indicator: Contract is not valid</h4>
 <p>The parties involved must be legally capable of entering into the contract to be considered a valid contract. </p>
- <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
+ <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>  
+<p>The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
+<p>Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>     
 </div>
 
 <div id="ajax-q3-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
@@ -232,6 +236,8 @@
 <h4>Indicator: Contract is not valid</h4>
 <p>The object of the contract must be legitimate to be considered a valid contract.  </p>
  <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
+<p>The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
+<p>Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>
 </div>
 
 <div id="ajax-q4-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
@@ -240,7 +246,10 @@
 <hr>
 <h4>Indicator: Contract is not valid</h4>
 <p>The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms) to be considered a valid contract.  </p>
- <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
+ <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>  
+<p>The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
+<p>Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>
+     
 </div>
 
 <div id="ajax-q4-contract-yes" class="hidden wb-frmvld gc-font-2019 alert alert-success">
@@ -319,7 +328,7 @@
 <div id="ajax-contract-null">
 <p>When addressing the issue of statutory illegality, the courts can decide that a contract is null and void from the beginning (void ab initio) if the formation of the contract was prohibited by statute and if, in the court's assessment, it would not be contrary to public policy to declare the contract void ab initio.</p>
 </div>
-<h2 id="h_3">Cessation of a contract</h2>
+<h2 id="h_3">Termination of a contract</h2>
 <div id="ajax-contract-stop">
 <p>Examples of when a contract is terminated:</p>
 
@@ -352,12 +361,6 @@
 	
 </div>
 </div>
-<nav class="mrgn-bttm-lg mrgn-tp-lg">
-  <h3 class="wb-inv">Document navigation</h3>
-  <ul class="pager">
-    <li class="next"><a href="factors.html" rel="next"><span class="wb-inv">Next: </span>Determine if the worker is an incorporated employee</a></li>
-  </ul>
-</nav>
 
 
 <section id="contract-null" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Who decides when a contract is null and void</h2>
