--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -95,7 +95,7 @@
 </div>
 
 
-<p>There must be a valid contract in place to determine if the engagement is considered as employment or self-employment.</p>
+<p>There must be a valid contract in place to determine if the worker is considered an employee or is self-employed.</p>
 <details> <summary>Examples of questions the CRA may ask you to determine the validity and the terms of the contract</summary>
 <h3 id="h_1_1">Validity of a contract</h3>
 <ul>
@@ -208,7 +208,7 @@
 
   <div id="ajax-q1-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
               <h3><small>Your result </small><br>
-                There are no offer and an acceptance of the terms and conditions of the agreement from the parties</h3>
+                There are no offer and acceptance of the terms and conditions of the agreement from the parties</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>    
  <p>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties to be considered a valid contract.  </p>
