--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -211,10 +211,10 @@
                 There are no offer and acceptance of the terms and conditions of the agreement from the parties</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>    
- <p>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties to be considered a valid contract.  </p>
- <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>    
-<p>The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-<p>Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>   
+ <p class="mrgn-tp-md">There must be an offer and an acceptance of the terms and conditions of the agreement from the parties to be considered a valid contract.  </p>
+ <p class="mrgn-tp-md">If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>    
+<p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
+<p class="mrgn-tp-md">Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>   
             </div>
 
 
@@ -223,10 +223,10 @@
                 The parties involved are not legally capable of entering into a contract</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>
-<p>The parties involved must be legally capable of entering into the contract to be considered a valid contract. </p>
- <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>  
-<p>The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-<p>Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>     
+<p class="mrgn-tp-md">The parties involved must be legally capable of entering into the contract to be considered a valid contract. </p>
+ <p class="mrgn-tp-md">If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>  
+<p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
+<p class="mrgn-tp-md">Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>     
 </div>
 
 <div id="ajax-q3-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
@@ -234,10 +234,10 @@
                 The object of the contract is not legitimate</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>
-<p>The object of the contract must be legitimate to be considered a valid contract.  </p>
- <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
-<p>The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-<p>Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>
+<p class="mrgn-tp-md">The object of the contract must be legitimate to be considered a valid contract.  </p>
+ <p class="mrgn-tp-md">If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
+<p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
+<p class="mrgn-tp-md">Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>
 </div>
 
 <div id="ajax-q4-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
@@ -245,10 +245,10 @@
                The agreement is not mutual</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>
-<p>The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms) to be considered a valid contract.  </p>
- <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>  
-<p>The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-<p>Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>
+<p class="mrgn-tp-md">The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms) to be considered a valid contract.  </p>
+ <p class="mrgn-tp-md">If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>  
+<p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
+<p class="mrgn-tp-md">Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>
      
 </div>
 
