--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -133,11 +133,22 @@
 <h3 id="h-1">Gather the facts</h3>			  
 
 <ol class="lst-stps stps-strpd">
-<li><h3>Contract arrangement</h3> 
+<li><details open="open"><summary>Factor 1</summary>
 <div id="contract2">
+<div class="d-flex mrgn-tp-md">
+<div class=" brdr-lft h3 mrgn-lft-md mrgn-rght-lg mrgn-tp-0 text-info">			 
+			<span class="fa fa-stack  pstn-lft-xs">
+			   <span class="fas fa-circle fa-stack-2x fa-inverse "></span>
+			  <span class="far fa-circle fa-stack-2x "></span>
+			 
+		    <span class="fas fa-handshake pull-left fa-stack-1x"></span>
+	  </span>	 
+			
+	  </div> 
+<h2 class="pull-left mrgn-tp-sm h3 text-info" id="factor1">Contract arrangement</h2>
+<div class="clearfix"></div>
 <p id="1_2" class="brdr-bttm">The CRA asks the worker and the payer what their intent was when they entered into the working arrangement. Workers and payers can choose how they set up their affairs. However, the employment status they choose must reflect their working relationship.</p>
 
-<details><summary>Factor 1 - Question and indicator</summary>
 <div id="ajax-cont1_2"><div class="wb-frmvld gc-font-2019"><form method="get">
 	<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
 		<p>At the time of contracting, how did the parties intend to characterize the relationship? </p>
@@ -178,7 +189,7 @@
 
 </form></div></div>
  
-</details></div>
+</div>  </div> </details>
 </li>
 
 
