--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -133,19 +133,19 @@
 <h3 id="h-1">Gather the facts</h3>			  
 
 <ol class="lst-stps stps-strpd">
-<li><details open="open"><summary>Factor 1</summary>
-<div id="contract2">
-<div class="d-flex mrgn-tp-md">
-<div class=" brdr-lft h3 mrgn-lft-md mrgn-rght-lg mrgn-tp-0 text-info">			 
+<li><details open="open"><summary><div class=" brdr-lft h3 mrgn-lft-md mrgn-rght-lg mrgn-tp-0 text-info">			 
 			<span class="fa fa-stack  pstn-lft-xs">
 			   <span class="fas fa-circle fa-stack-2x fa-inverse "></span>
 			  <span class="far fa-circle fa-stack-2x "></span>
 			 
 		    <span class="fas fa-handshake pull-left fa-stack-1x"></span>
 	  </span>	 
-			
-	  </div> 
-<h2 class="pull-left mrgn-tp-sm h3 text-info" id="factor1">Contract arrangement</h2>
+		 <h2 class="h3 text-info" id="factor1">Contract arrangement</h2>	
+	  </div></summary>
+<div id="contract2">
+<div class="d-flex mrgn-tp-md">
+
+
 <div class="clearfix"></div>
 <p id="1_2" class="brdr-bttm">The CRA asks the worker and the payer what their intent was when they entered into the working arrangement. Workers and payers can choose how they set up their affairs. However, the employment status they choose must reflect their working relationship.</p>
 
@@ -177,7 +177,7 @@
 
 
 <div id="ajax-cont1self_2" class="hidden wb-frmvld gc-font-2019 alert alert-info">
-<h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
+<h4><span class="fas fa-user text-info fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p>The two parties intend to enter into a contract <strong>for</strong> services (CFS).</p>
 
 <details><summary>Example</summary>
@@ -210,7 +210,7 @@
 
 
 <div id="ajax-2ayes1_2" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
-<h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
+<h4><span class="fas fa-people-arrows text-info fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p>Expenses related to an employee would generally be reported as salary/wage expenses.</p>
 </div>
 
